# Telow

./: .gitignore  Dockerfile  README.org  docker-compose.yml  pyproject.toml  requirements.txt  stack.py
doc/: document.org  document.tex
fixture/: action.json  status.json
main_app/: admin.py  urls.py
main_app/forms/: forms.py
main_app/migrations/: 0003_auto_20211012_1017.py  0004_department_workflow_workflow_meta.py  0006_alter_workflow_meta_previous.py  0007_workflow_meta_order_id.py  0008_auto_20211015_1818.py  0010_status_description.py  0011_auto_20211015_2204.py  0013_auto_20211024_2353.py  0014_status_color.py  0015_alter_action_name.py  0016_auto_20211026_1232.py  0020_auto_20211027_0531.py  0021_auto_20211027_0833.py  0022_alter_process_process_name.py  0023_department.py  0024_auto_20211031_0901.py  0026_customer.py  0028_customer_operator.py  0029_alter_customer_operator.py  0030_status_editable.py  0031_process_action_priority.py  0032_alter_process_action_priority.py
main_app/models/: __init__.py  customer_model.py  process_model.py  status_model.py
main_app/templates/: 404.html  500.html
main_app/views/: action_view.py  customer_view.py  department_view.py  process_view.py  status_view.py  view.py
order/: forms.py  models.py  urls.py  views.py
order/migrations/: 0001_initial.py  0003_auto_20211015_1937.py  0004_alter_order_order_title.py  0005_alter_order_meta_status.py  0007_alter_order_priority.py  0008_auto_20211027_0829.py  0010_alter_order_meta_status.py  (+5 more)
telow/: .env-example  .gitignore  db.sqlite3  manage.py  settings.py  urls.py
(+78 files in other folders)
