[tool.poetry]
name = "telow"
version = "0.1.0"
description = ""
authors = ["M. Safarian <ma.hiccup@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
gunicorn = "^20.1.0"
django-admin-interface = "^0.17.2"
django-crispy-forms = "^1.13.0"
django-jalali-date = "^1.0.0"
python-dotenv = "^0.19.2"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
